--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cursito JavaScript</title>
 </head>
 <body>
-    <h1 style="background-color:aquamarine;">Bienvenido a la comunidad JavaScript!</h1>
+    <h1 style="background-color:rgb(149, 91, 249);">Buy a classic cars!</h1>
     <script src="./index.js"></script>
 </body>
 </html>
