--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="es">
 <head>
     <title>Cursito JavaScript</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="background-color:rgb(149, 91, 249);">Buy a classic cars!</h1>
+    <header id="headerContainer">
+    </header>
+    <div id="productsContainer">
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
