--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <title>Cursito JavaScript</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- <script>
+        let d = new Date();
+        alert("Today's date is " + d);
+    </script> -->
 </head>
 <body>
-    <header id="headerContainer">
-    </header>
-    <div id="productsContainer">
+    <header id="headerContainer"></header>
+    <div id="productsContainer"></div>
+    <div id="newsletterContainer">
+        <h3>Newsletter</h3>
+        Email:
+        <input type="email" id="email" placeholder="Put your e-mail here!">
+        <input type="submit" value="Subscribe">
     </div>
+    
     <script src="./index.js"></script>
 </body>
 </html>
