--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <input class="buttonSus" type="submit" value="Subscribe">
         </form>
     </footer>
-    <script src="./addToStock.js" type="module"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./cart.js" type="module"></script>
     <script src="./stock.js" type="module"></script>
     <script src="./index.js" type="module"></script>
 </body>
