--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <div id="cartContainer">
             <h3>Cart</h3>
         </div>
+        <ul id="newArrivals">
+        </ul>
     </main>
     <footer>
-        <form class="newsletterContainer">
+        <form class="newsletterContainer" id="form">
             <h3>Newsletter</h3>
             Email:
             <input type="email" id="email" placeholder=" Put your e-mail here!">
@@ -21,8 +23,6 @@
         </form>
     </footer>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./cart.js" type="module"></script>
-    <script src="./stock.js" type="module"></script>
     <script src="./index.js" type="module"></script>
 </body>
 </html>
